--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
+	<title>practice2-6</title>
 </head>
 <body>
+	<header>
+		<div class="headline">
+		<h1 class="head-text">サービス紹介</h1>
+	</div>
+	</header>
+
+	<main class="content">
+		<div class="content-list">
+			<img class="content-image" src="img/wc-logo.png">
+			<p class="content-text">
+			マンツーマンサポートによる学習で、<br>
+			確実にWebスキルを習得できるプログラミングスクールです。
+			</p>
+			<a href="https://web-camp.io/" class="link">webサイト</a>
+		</div>
+
+		<div class="content-list">
+			<img class="content-image" src="img/wcp-logo.png">
+			<p class="content-text">
+			未経験から転職を保証する<br>
+			日本で唯一のプログラミングスクールです。
+			</p>
+			<a href="https://web-camp.io/" class="link">webサイト</a>
+		</div>
+
+		<div class="content-list">
+			<img class="content-image" src="img/wcw-logo.png">
+			<p class="content-text">
+			家庭も仕事も頑張りたい主婦・ママ向けの、<br>
+			１ヶ月でWebサイトを制作するWebデザインスクールです。
+			</p>
+			<a href="https://web-camp.io/" class="link">webサイト</a>
+		</div>
+
+		<div class="content-list">
+			<img class="content-image" src="img/wcc-logo.png">
+			<p class="content-text">
+			3000名のエンジニアをサポートしてきたエージェントが<br>
+			あなたの転職をサポート。
+			</p>
+			<a href="https://web-camp.io/" class="link">webサイト</a>
+		</div>
+	</main>
 
 </body>
 </html>
